# opengl-sandbox

./: .gitignore  CMakeLists.txt  MacOSXBundleInfo.plist.in
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-vs.yml
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: TriangleMesh.hpp  utils.hpp
shaders/: s.frag  s.vert
src/: TriangleMesh.cpp  main.cpp
